--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: #121212; // um preto suave, quase grafite
+    color: #f0f0f0;
+    font-family: 'Roboto', sans-serif;
+}
