feat: Alterando link do currículo

--- a/src/app/components/portfolio-carousel/portfolio-carousel.component.html
+++ b/src/app/components/portfolio-carousel/portfolio-carousel.component.html
@@ -23,7 +23,7 @@
     <p>Confira meus projetos e currículo completo:</p>
     <div class="contact-links">
       <a href="https://github.com/Daniel-Penelva" target="_blank">GitHub</a>
-      <a href="https://drive.google.com/file/d/1F3fcqX89IiBkAVJxhm93cxCJzsBVdd4X/view?usp=sharing" target="_blank">Currículo</a>
+      <a href="https://drive.google.com/file/d/1JAVdP-mizgY0BWJN6wBx4NMbokcLFnJL/view" target="_blank">Currículo</a>
       <a href="https://www.linkedin.com/in/daniel-penelva-andrade/" target="_blank">Linkedin</a>
     </div>
 </mat-card>
